# bbe-msa-bs-account-movement/src/main/java/com/business/banking/services/domain/model/TransferResult.java
@@ -1,0 +1,13 @@
+package com.business.banking.services.domain.model;
+
+import lombok.*;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder(toBuilder = true)
+public class TransferResult {
+    private Movement debitMovement;
+    private Movement creditMovement;
+}
